--- a/gb/nf5773_7.md
+++ b/gb/nf5773_7.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中共分崩·贪腐淫乱</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/24/n11608667.md#1" target="_blank">一带一路漫画渗入校园 大马发禁令并调查</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/24/n11608667.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/bfa9165d002cb546bf0118f78b9b5603-150x120.jpg" align ="left"></a>马来西亚内政部23日宣布查禁《互利共赢的一带一路》漫画，指出漫画宣扬共产主义和社会主义，含有危害公共秩序、安全的内容。作者和画家等人已遭警方调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 4:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/23/n11607861.md#1" target="_blank">收贿及培植利益代言人 三亚前副市长被双开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/23/n11607861.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/wangteming-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共海南省三亚市人民政府前党组成员、副市长王铁明日前被“双开”并移送司法。王铁明被指以公权力为砝码搞权钱交易，培植利益“代言人”，在工程项目承揽等方面为他人谋利并收受巨额贿赂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月24日 4:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11605319.md#1" target="_blank">山东高院副院长落马 曾参与薄熙来案审理</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11605319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/li-yong_1-150x120.jpg" align ="left"></a>中共山东省高级法院党组副书记、副院长李勇日前“涉嫌严重违纪违法”被查。李勇担任济南市中级法院院长时，该法院审理了中共重庆市委前书记薄熙来案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月23日 3:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11604658.md#1" target="_blank">受贿数额特别巨大 吉林、甘肃两厅官被起诉</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11604658.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/46dbd440706eec5feb54f616abcab164-150x120.jpg" align ="left"></a>10月22日，中共最高检察院微信号消息，中共吉林省长春市委前副书记杨子明、甘肃敦煌市委前书记詹顺舟被起诉。两人都曾因积极配合江泽民集团迫害法轮功学员被海外明慧网点名。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 11:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11603774.md#1" target="_blank">受贿数额巨大 云南昭通前公安局长被双开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11603774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/61-150x120.jpg" align ="left"></a>10月22日中纪委国家监察网消息，中共云南省昭通市政府前副市长、市公安局前局长李彪被双开。李彪曾长期积极跟随中共江泽民集团迫害法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 1:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/21/n11603283.md#1" target="_blank">大搞权钱交易 湖南两地原政法委书记被双开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/21/n11603283.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/tang-xianglim_1-1-150x120.jpg" align ="left"></a>中共湖南省湘西自治州委前副书记、宣传部部长唐湘林和省发改委前党组成员欧阳旭日前被“双开”并移送司法。唐湘林被指买官卖官，大搞权色交易、钱色交易等。欧阳旭被指为黑恶势力充当“保护伞”，受贿、滥用职权等。唐湘林、欧阳旭曾分别在永州市、湘西州担任政法委书记多年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 7:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/21/n11601781.md#1" target="_blank">内蒙古公安厅前副厅长之子受审 全家被抓</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/21/n11601781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/dubaojun1-600x400-150x120.jpg" align ="left"></a>大陆内蒙古自治区公安厅原副厅长孟建伟之子、包头市纪委监委原副县级检查员孟根达来近日受审，现场画面亦曝光。孟建伟及其妻子和儿子均曾在当地政法系统任职多年，也在几日内集中被抓。孟建伟被指是当地黑社会的“伞”上之“伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 2:56 PM							</td></tr>
@@ -13,9 +17,6 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/14/n11588574.md#1" target="_blank">贿赂江泽民等家族 德银行中国捞金术曝光</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/14/n11588574.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/^C3FC8CB13412E8D27E22E48C8EDA11B5BF74244039DF71C99D^pimgpsh_fullsize_distr-150x120.jpg" align ="left"></a>《纽约时报》和德国报纸《南德意志报》（SüddeutscheZeitung）最新的一项调查发现，德意志银行（Deutsche Bank）20年前进入中国时发现面临同行激烈竞争，为赢得业务、其不断搭建跟中共高层及亲属的人脉，大胆行动背后其实就是走穴和改变规则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 1:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/14/n11588531.md#1" target="_blank">副手半年前被查 内蒙通辽市政协主席投案</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/14/n11588531.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/gaochen-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共内蒙古通辽市政协党组书记、主席高忱日前主动投案，接受纪律审查和监察调查。今年4月，高忱的副手、通辽市政协副主席吴国林被查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月15日 7:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank">无锡塌桥前 安徽一座大桥垮塌 断为三段</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/13/n11585704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/7b9a7e1f7509feca0fb757febeb21c14-150x120.jpg" align ="left"></a>继江苏无锡一天桥倒塌后，安徽宣城市一座大桥也突然坍塌，尽管该事件未造成人员伤亡，但因为当地对外交通因此中断，令村民忧心水稻收成后无法及时卖出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:05 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/13/n11585775.md#1" target="_blank">甘肃省前巡视组长被查 曾与火荣贵合作出书</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/13/n11585775.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/08cfb1bfd7efff8eafa36d6518a27108-150x120.jpg" align ="left"></a>中共甘肃省委前巡视组组长武文斌日前落马，他曾与抓捕记者的武威市委前书记火荣贵合作出书。火荣贵上个月刚刚被判处18年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 2:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/12/n11584478.md#1" target="_blank">十一阅兵红后代方阵 泄中共残酷内斗秘密</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/12/n11584478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/ec90893575857e949c8d79e7991c0f76-150x120.jpg" align ="left"></a>中共“十一”大阅兵虽然已经过去十多天，但是那个坐着很多红后代的方阵队，因为这些红后代坐在一起、举着其前辈的照片，格外引人关注，所以中共互相血腥内斗的往事再次被提起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 6:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/12/n11583689.md#1" target="_blank">受贿逾8千万 内蒙古厅官李世镕贪腐细节曝光</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/12/n11583689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/li-shirong5b-150x120.jpg" align ="left"></a>中共内蒙古厅官李世镕今年8月以受贿、挪用公款等五罪被判无期徒刑。陆媒日前披露了李世镕从收受他人几万元“礼金”开始，到动辄收受或勒索上百万元现金、存款、干股或房产等的过程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月12日 1:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11604236.md#1" target="_blank">上海第一中院前院长潘福仁被判刑9年半</a><br></h3>10月22日上午，中共上海第一中级法院前院长潘福仁被判刑9年半。潘福仁是上海检察院前检察长陈旭的旧部。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 8:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/22/n11604526.md#1" target="_blank">上海杨浦法院院长任涌飞被查 曾是陈旭旧部</a><br></h3>10月21日晚，中共上海市杨浦法院院长任涌飞涉嫌“严重违纪违法”，目前正接受调查。上海前检察长陈旭曾是任涌飞的上司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 6:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/21/n11601944.md#1" target="_blank">贵州正厅长级官员涉贪污受贿被双开</a><br></h3>10月21日，贵州省有色金属和核工业地质勘查局原党委委员、副局长宫晓农（正厅长级）被双开并被移送起诉。宫晓农的罪名之一是公开发表与中共最高层不同调的言论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 4:51 PM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/17/n11593738.md#1" target="_blank">北京女厅官权钱交易 索贿受贿细节曝光</a><br></h3>北京市国有文化资产监督管理办公室（简称文资办）前党委书记张慧光因犯贪污罪、受贿罪，被判处有期徒刑15年。其搞权钱交易，肆无忌惮索贿的细节令人侧目，每月仅花在脸上的美容保养费就达1万余元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月17日 5:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/16/n11592214.md#1" target="_blank">广东肇庆政协前副主席被逮捕 曾迫害法轮功</a><br></h3>10月16日，中共广东省肇庆市政协前副主席冯敏强涉嫌受贿案，移送起诉。日前，冯敏强涉嫌受贿罪被逮捕。冯敏强曾在广东肇庆任职，期间均积极参与迫害法轮功，造下罪业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月16日 8:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/14/n11586579.md#1" target="_blank">受贿逾千万 内蒙古赤峰前政法委书记受审</a><br></h3>10月12日上午9时，中共内蒙古赤峰市委前副书记、政法委书记王东伟案在乌海开庭审理。其被指控受贿上千万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 1:45 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/10/13/n11585260.md#1" target="_blank">河南郑州“政法王”黄保卫投案被调查</a><br></h3>中共河南郑州前公安局长黄保卫主动投案被调查。黄保卫曾长期在河南政法系统任职，也是河南省委原常委、政法委原书记吴天君的下属。陆媒表示，黄保卫被查的传言多年来一直在河南官场流传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 7:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/nf5773_7.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/nf5773_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf5773_7.htm">http://www.epochtimes.com/gb/nf5773_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
