--- a/gb/nf5773_9.md
+++ b/gb/nf5773_9.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中共分崩·贪腐淫乱</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/29/n11553685.md#1" target="_blank">上海戴志康被捕 2.8万人百亿资金未追回</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/29/n11553685.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/0cfc7f1dfaca21a50d3e63edb3e4984a-150x120.jpg" align ="left"></a>大陆“资本大鳄”、“地产大佬”、上海证大文化创意发展有限公司（简称“证大公司”）实际控制人戴志康被抓。据估算戴志康掌控的证大公司未偿付金额至少达百亿（人民币，下同），涉及投资者2.8万人。而目前该公司初步被追缴现金仅约2亿元。
+
+9月28日，官方通报，9月27日对戴志康等20余名犯罪嫌疑人批捕；8月29日，证大公司涉嫌非法吸收公众存款案被立案侦查。
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 5:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/29/n11553376.md#1" target="_blank">叶选平出殡背后：广东政坛客家帮的兴亡</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/29/n11553376.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/06/1406281210272639-150x120.jpg" align ="left"></a>近日，中共已故元老叶剑英的长子、前广东省长叶选平去世、出殡，广东政坛的“客家帮”落幕。自江泽民派李长春进入广东后，“客家帮”渐被江派收编。中共“十八大”后，在当局的反腐风暴中，“客家帮”开始土崩瓦解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 11:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/28/n11553103.md#1" target="_blank">“凡非洲所需 中方倾囊援助” 王毅讲话惹怒</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/28/n11553103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1171531062-150x120.jpg" align ="left"></a>近年来，中共大规模对外援助备受诟病。中共外交部长王毅近日在联合国峰会再次对“非洲兄弟”作出承诺，其“两个凡是”论引发国内舆论抨击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 5:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/27/n11551310.md#1" target="_blank">华为发行60亿债券 任正非竟“蒙在鼓里”？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/27/n11551310.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/PO_X6401-150x120.jpg" align ="left"></a>华为公司近日将在中国境内首次发行共计60亿元公募债券，但该公司的CEO任正非却声称对此事不知情。他的这番表态受到舆论质疑：发行巨债“一把手”却不知情，华为到底是谁的？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月28日 6:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11549060.md#1" target="_blank">川普吁查拜登父子 上海神秘公司速删亨特资料</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11549060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/09/1109020319282039-150x120.jpg" align ="left"></a>在美国总统川普近日要求公开乔·拜登（Joe Biden）父子从中共和乌克兰收取巨额资金的详情之后，一家总部位于上海的大型私募股权公司将其官网上有关该公司的重要合伙人亨特·拜登（Hunter Biden）的所有信息悄悄撤下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月27日 8:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11549033.md#1" target="_blank">搞权色和钱色交易 吉林长春原副书记被处分</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11549033.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/3ef5275f4e704ae846e609adcf6cd5a0-150x120.jpg" align ="left"></a>中共吉林省长春市委原副书记杨子明日前被开除党籍并移送司法。杨子明被指搞权色、钱色交易，利用职务便利收受巨额贿赂等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月27日 4:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11548796.md#1" target="_blank">秦光荣被起诉 官方通报泄其落马政治原因</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/26/n11548796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/01/1301272043021497-150x120.jpg" align ="left"></a>中共云南省委前书记秦光荣日前被立案审查，移交司法起诉。当局的通报被指泄漏了秦光荣落马的政治原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月27日 4:10 AM							</td></tr>
@@ -29,13 +36,9 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11535556.md#1" target="_blank">吴小晖被中共没收资产857亿 创最高纪录</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11535556.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/9-wu-xiaohui_meitu_3-150x120.jpg" align ="left"></a>中国安邦集团原董事长吴小晖，因非法集资与职务侵占罪被判处18年徒刑后，近期传出上海法院没收他的105亿人民币财产，并追缴不法所得752亿人民币，总金额创下中共法院裁罚金额的最高纪录。 ?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11535184.md#1" target="_blank">宁夏交通厅两任厅长被判刑 曾共事十多年</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11535184.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/zhousu-1200x800-v1-600x400-2-150x120.jpg" align ="left"></a>继宁夏交通运输厅前厅长许学民8月获刑后，另一任厅长、许学民的前任周舒近日以受贿1720万余元被判处有期徒刑13年。周舒、许学民曾共事十多年......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 9:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11534342.md#1" target="_blank">大陆数十亿医保基金被骗 医院院长隐秘作案</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11534342.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/04/1312271502051528-150x120.jpg" align ="left"></a>由于体制及监管漏洞，导致大规模骗取医保基金事件频发，不乏骗保达数千万元（人民币，下同）的案件。多年来，被骗取的医保基金达数十亿元。陆媒披露了医保基金被骗走的事例，包括河北一家医院在院长和主任的运作下隐秘作案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532646.md#1" target="_blank">徇私枉法及受贿 广西一前反贪局长被双开</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532646.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/luliquan-Web-Banner-1200x800-v1-150x120.jpg" align ="left"></a>中共广西钦州市检察院检察委员会专职委员、原反贪局局长陆立泉日前被“双开”并移送司法。陆立泉被指徇私枉法，以检察权谋取私利，受贿数额特别巨大等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532591.md#1" target="_blank">习近平考察农业大省 学者：凸显粮食危机</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532591.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1d6594ea40636b09d2d47666a1f5f129-150x120.jpg" align ="left"></a>中共国家主席习近平近日连续两天考察中国农业大省河南。大陆学者说，此事凸显中国大陆最近几年出现的粮食危机。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 10:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532468.md#1" target="_blank">湖南黑老大行贿细节曝光 涉多名政法官员</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/19/n11532468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/dayong1-150x120.jpg" align ="left"></a>有中共官员当其“保护伞”的湖南黑老大文烈宏以涉诈骗、行贿等15罪今年1月被判处无期徒刑。近日官方公布了文烈宏的行贿细节及对象，其中包括湖南长沙市公安局前常务副局长单大勇、市委政法委前副书记谭学军等多名政法系统官员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 9:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/25/n11546015.md#1" target="_blank">大陆富豪女涉同新欢谋杀男友 旧金山开审</a><br></h3>9月23日，美国湾区富二代女子李凡妮（Tiffany Li）涉嫌谋杀前男友一案开庭。检察官指控李凡妮伙同新男友卡维·巴亚（Kaveh Bayat）一起谋杀了李的前男友基思·格林（Keith Green）。李和巴亚拒不认罪，预计这个审判将持续到11月中旬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/23/n11541542.md#1" target="_blank">违规持股受贿淫乱 涉军工集团原老总被双开</a><br></h3>落马一年多后，中国工程物理研究院应用技术研究发展中心原主任、四川久远投资控股集团有限公司原董事长邓全农日前被“双开”并移送司法。邓全农被指违规持股、买卖股票获利，收受、索要贿赂，长期淫乱等。邓全农牵涉中共四川的核武制造基地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/23/n11539988.md#1" target="_blank">内蒙古两厅官被查处 皆涉犯罪</a><br></h3>9月23日，两名内蒙古自治区官员被查处，其中退休官员苏建荣被开除中共党籍，另一官员被双开；两人皆涉犯罪被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11535842.md#1" target="_blank">上海派出所长当保护伞 涉黄会所年赚上亿元</a><br></h3>中共官场腐败成风，公安官员等充当涉黄保护伞的案例不断曝光。中共官方信息日前披露，上海一派出所的所长汪宏宜曾收受辖区内一家涉黄会所经营人10万元的贿赂，当其“保护伞”，而该会所开业仅1年多就非法获利1.07亿余元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 6:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/9/20/n11533929.md#1" target="_blank">卸任茅台集团总经理4年 刘自力被逮捕</a><br></h3>9月20日，中国贵州茅台酒厂（集团）有限责任公司党委前副书记、副董事长、总经理刘自力被逮捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 12:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_8.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_8.md#1">8</a>&nbsp;&nbsp;9&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_10.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/nf5773_9.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf5773_9.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/nf5773_9.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf5773_9.htm">http://www.epochtimes.com/gb/nf5773_9.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
