--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779418.md#1">中共文艺界多名官员被查 1人为女歌手</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779070.md#1">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀延：香港抗议者的智慧（上）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778497.md#1">汕头怀孕母牛三步一跪求生 网友买下放生</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778256.md#1">武汉肺炎为新型冠状病毒 跟此前发现的不同</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11778097.md#1">伊朗报复前通知伊拉克 分析：怕与美开战</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779313.md#1">中国主要城市写字楼空置率惊人 近乎鬼城</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779091.md#1">北大医学部教授：武汉肺炎人传人可能性大</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778820.md#1">对美承诺或成空 传大陆再买10批巴西大豆</a><br>
